--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Environment variables - NEVER commit credentials
+.env
+.env.local
+.env.*.local
+.temp/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
