Fix the blocked behavior to access inspect, Remove some navigation in the Dashboard

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
 # Environment
 VITE_ENV=development
+
+# Optional UI friction only (not real security). Set true to block right-click and common devtools shortcuts.
+VITE_BLOCK_BROWSER_TOOLS=false
